see if adding webkit background cover fixes issue on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,6 +6,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
   background-attachment: fixed;
 }
 
